<resources>
    <string name="app_name">UserLoginSqlite</string>
    <string name="home_desc">Home Icon</string>
    <string name="wardrobe_desc">Your Wardrobe Icon</string>
    <string name="work_desc">Work Arena Icon</string>
    <string name="style_desc">Style Gallery Icon</string>
    <string name="home_text">Home</string>
    <string name="wardrobe_text">Wardrobe</string>
    <string name="work_text">Work</string>
    <string name="style_text">StyleHub</string>
    <string-array name="occasion_options">
        <item>Traditional</item>
        <item>Casual</item>
        <item>Formal</item>
    </string-array>

    <string-array name="categories">
        <item>upper</item>
        <item>lower</item>
        <item>accessory</item>
    </string-array>

    <string-array name="base_showcase">
        <item>"Choose Type First"</item>
    </string-array>

    <string-array name="upper_body_array">
        <item>Traditional</item>
        <item>Formal</item>
        <item>Casual</item>
    </string-array>

    <string-array name="lower_body_array">
        <item>Traditional</item>
        <item>Formal</item>
        <item>Casual</item>
    </string-array>

    <string-array name="accessory_array">
        <item>Cap</item>
        <item>Shoes</item>
    </string-array>

</resources>
