<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".WardrobeActivity">

    <!-- Top Panel with Profile Icons and Yapp Icon -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/topPanel"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#91A892"
        app:layout_constraintTop_toTopOf="parent">

        <!-- Container for Profile Icons -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/male_icon"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_marginStart="16dp"
                android:contentDescription="Male Icon"
                android:src="@drawable/ic_male"
                android:visibility="gone"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/default_icon"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_marginStart="8dp"
                android:contentDescription="Default Profile Icon"
                android:src="@drawable/ic_defaultprofile" />

            <ImageView
                android:id="@+id/female_icon"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_marginStart="16dp"
                android:contentDescription="Female Icon"
                android:src="@drawable/ic_female"
                android:visibility="gone"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <!-- Yapp Icon -->
        <ImageView
            android:id="@+id/yapp_icon"
            android:layout_width="80dp"
            android:layout_height="36dp"
            android:layout_marginStart="165dp"
            app:srcCompat="@drawable/ic_yapp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Bottom Panel with Navigation Icons -->
    <RelativeLayout
        android:id="@+id/bottomPanel"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="#91A892"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <!-- Home Icon -->
        <LinearLayout
            android:id="@+id/container_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/icon_home"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:contentDescription="@string/home_desc"
                android:src="@drawable/ic_home" />

            <TextView
                android:id="@+id/text_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/tinos_reg"
                android:text="@string/home_text"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

        <!-- Wardrobe Icon -->
        <LinearLayout
            android:id="@+id/container_wardrobe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="44dp"
            android:clickable="true"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/icon_wardrobe"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:contentDescription="@string/wardrobe_desc"
                android:src="@drawable/ic_wardrobe" />

            <TextView
                android:id="@+id/text_wardrobe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/tinos_reg"
                android:text="@string/wardrobe_text"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

        <!-- Work Icon -->
        <LinearLayout
            android:id="@+id/container_work"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="44dp"
            android:clickable="true"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/icon_work"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:contentDescription="@string/work_desc"
                android:src="@drawable/ic_work" />

            <TextView
                android:id="@+id/text_work"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/tinos_reg"
                android:text="@string/work_text"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

        <!-- Style Icon -->
        <LinearLayout
            android:id="@+id/container_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="44dp"
            android:clickable="true"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/icon_style"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:contentDescription="@string/style_desc"
                android:src="@drawable/ic_style" />

            <TextView
                android:id="@+id/text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/tinos_reg"
                android:text="@string/style_text"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

    </RelativeLayout>

    <!-- Virtual Wardrobe Title -->
    <TextView
        android:id="@+id/txtvirtualwardrobe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/tinos_reg"
        android:text="My Wardrobe"
        android:textColor="#171E49"
        android:textSize="40sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topPanel" />

    <!-- Buttons for Apparels -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/innerConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="5dp"
        android:background="#EFEFEF"
        app:layout_constraintTop_toBottomOf="@id/txtvirtualwardrobe">

        <Button
            android:id="@+id/btnallapparels"
            android:layout_width="70dp"
            android:layout_height="36dp"
            android:layout_marginStart="5dp"
            android:background="@drawable/button_selector"
            android:fontFamily="@font/tinos_reg"
            android:text="All"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btnupperapparels"
            android:layout_width="70dp"
            android:layout_height="36dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/button_selector"
            android:fontFamily="@font/tinos_reg"
            android:text="Upper"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@+id/btnallapparels" />

        <Button
            android:id="@+id/btnlowerapparels"
            android:layout_width="70dp"
            android:layout_height="36dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/button_selector"
            android:fontFamily="@font/tinos_reg"
            android:text="Lower"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@+id/btnupperapparels" />

        <Button
            android:id="@+id/btnshoesapparels"
            android:layout_width="70dp"
            android:layout_height="36dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/button_selector"
            android:fontFamily="@font/tinos_reg"
            android:text="Shoes"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@+id/btnlowerapparels" />

        <Button
            android:id="@+id/btnaccessoriesapparels"
            android:layout_width="70dp"
            android:layout_height="36dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/button_selector"
            android:fontFamily="@font/tinos_reg"
            android:text="Accessories"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@+id/btnshoesapparels" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Vertical Scroll View for Apparel Images -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/innerConstraintLayout"
        app:layout_constraintBottom_toBottomOf="parent"
        android:fillViewport="true">

        <GridLayout
            android:id="@+id/grid_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:orientation="vertical"
            android:padding="8dp">

            <!-- Example of a dynamically added ImageView -->
            <ImageView
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_margin="8dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_apparel_example"
                android:layout_columnWeight="1"
                android:contentDescription="Apparel Image" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_margin="8dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_apparel_example"
                android:layout_columnWeight="1"
                android:contentDescription="Apparel Image" />

            <!-- Repeat the pattern for additional rows -->
            <ImageView
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_margin="8dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_apparel_example"
                android:layout_columnWeight="1"
                android:contentDescription="Apparel Image" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_margin="8dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_apparel_example"
                android:layout_columnWeight="1"
                android:contentDescription="Apparel Image" />

            <!-- More ImageViews can be added dynamically here -->

        </GridLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
