<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF9F9"
    tools:context=".home_page">

    <RelativeLayout
        android:id="@+id/topPanel"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="#91A892"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!-- ConstraintLayout containing profile icons -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:clickable="false"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <!-- Male Icon -->
            <ImageView
                android:id="@+id/male_icon"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:contentDescription="Male Icon"
                android:src="@drawable/ic_male"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!-- Default Icon -->
            <ImageView
                android:id="@+id/default_icon"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:clickable="true"
                android:visibility="visible"
                android:contentDescription="Default Profile Icon"
                android:src="@drawable/ic_defaultprofile"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!-- Female Icon -->
            <ImageView
                android:id="@+id/female_icon"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:contentDescription="Female Icon"
                android:src="@drawable/ic_female"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <!-- Yapp Icon -->
        <ImageView
            android:id="@+id/yapp_icon"
            android:layout_width="80dp"
            android:layout_height="48dp"
            android:layout_marginStart="165dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_yapp" />

    </RelativeLayout>

    <TextView
        android:id="@+id/txtvirtualwardrobe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="0dp"
        android:fontFamily="@font/tinos_reg"
        android:text="My Wardrobe"
        android:textColor="#171E49"
        android:textSize="36dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topPanel"
        app:layout_constraintVertical_bias="0.006" />

    <!-- New ConstraintLayout below the TextView -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/innerConstraintLayout"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="5dp"
        android:background="#EFEFEF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtvirtualwardrobe"
        app:layout_constraintVertical_bias="0.0">

        <Button
            android:id="@+id/btnallapparels"
            android:layout_width="70dp"
            android:layout_height="48dp"
            android:layout_marginStart="5dp"
            android:background="@drawable/button_selector"
            android:fontFamily="@font/tinos_reg"
            android:text="All"
            android:textSize="10dp"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnupperapparels"
            android:layout_width="70dp"
            android:layout_height="48dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/button_selector"
            android:fontFamily="@font/tinos_reg"
            android:text="Upper"
            android:textSize="10dp"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@+id/btnallapparels"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnlowerapparels"
            android:layout_width="72dp"
            android:layout_height="48dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/button_selector"
            android:fontFamily="@font/tinos_reg"
            android:text="Lower"
            android:textColor="@color/black"
            android:textSize="10dp"
            app:layout_constraintStart_toEndOf="@+id/btnupperapparels"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnothers"
            android:layout_width="70dp"
            android:layout_height="48dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/button_selector"
            android:fontFamily="@font/tinos_reg"
            android:text="Other"
            android:textSize="10dp"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@+id/btnlowerapparels"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/more_icon"
            android:layout_width="70dp"
            android:layout_height="48dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="5dp"
            android:alpha="0.8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btnothers"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/more" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_marginTop="0dp"
        android:scrollbars="none"
        app:layout_constraintTop_toBottomOf="@+id/innerConstraintLayout"
        app:layout_constraintBottom_toTopOf="@id/bottomPanel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="500dp"
            android:layout_marginStart="1dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="11dp"
            android:background="@drawable/lightgrrenround"
            android:orientation="horizontal"
            android:padding="8dp">

            <!-- First Image -->
            <ImageView
                android:id="@+id/image1"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_margin="8dp"
                android:contentDescription="Image 1"
                android:padding="4dp"
                android:src="@drawable/ic_image1" />

            <!-- Second Image -->
            <ImageView
                android:id="@+id/image2"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_margin="8dp"
                android:contentDescription="Image 2"
                android:padding="4dp"
                android:src="@drawable/ic_image2" />

            <!-- Third Image -->
            <ImageView
                android:id="@+id/image3"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_margin="8dp"
                android:contentDescription="Image 3"
                android:padding="4dp"
                android:src="@drawable/ic_image3" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:scrollbars="horizontal" />

        </LinearLayout>
    </HorizontalScrollView>

    <RelativeLayout
        android:id="@+id/bottomPanel"
        android:layout_width="0dp"
        android:layout_height="110dp"
        android:layout_marginBottom="4dp"
        android:background="#91A892"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:id="@+id/container_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="10dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/icon_home"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:contentDescription="@string/home_desc"
                android:src="@drawable/ic_home" />

            <TextView
                android:id="@+id/text_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/tinos_reg"
                android:text="@string/home_text"
                android:textColor="@android:color/black"

                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/container_wardrobe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_toEndOf="@id/container_home"
            android:clickable="true"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/icon_wardrobe"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:clickable="true"
                android:contentDescription="@string/wardrobe_desc"
                android:src="@drawable/ic_wardrobe" />

            <TextView
                android:id="@+id/text_wardrobe"
                android:layout_width="64dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/tinos_reg"
                android:text="@string/wardrobe_text"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/container_work"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_toEndOf="@id/container_wardrobe"
            android:clickable="true"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/icon_work"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:contentDescription="@string/work_desc"
                android:src="@drawable/ic_work" />

            <TextView
                android:id="@+id/text_work"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/tinos_reg"
                android:text="@string/work_text"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/container_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_toEndOf="@id/container_work"
            android:clickable="true"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/icon_style"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:contentDescription="@string/style_desc"
                android:src="@drawable/ic_style" />

            <TextView
                android:id="@+id/text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/tinos_reg"
                android:text="@string/style_text"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>